# PyWeightmap

./: .gitignore  LICENSE  Makefile  PyWeightMap.cpp  README.md  WeightMap.cpp  WeightMap.hpp  map_util.cpp  pyproject.toml  setup.py  test.py
docs/: PyWeightMap.rst  conf.py  index.rst
src/: .gitignore  BlockArray2D.hpp  Makefile  PyWeightMap.cpp  WeightMap.cpp  WeightMap.hpp  map_util.cpp  map_util.hpp
tests/: test_WeightMap.py
